--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "eOSR-blockchain": {
+    "ghpage-eOSR": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/eOSR-blockchain",
+            "outputPath": "dist/ghpage-eOSR",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -67,18 +67,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "eOSR-blockchain:build"
+            "browserTarget": "ghpage-eOSR:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "eOSR-blockchain:build:production"
+              "browserTarget": "ghpage-eOSR:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "eOSR-blockchain:build"
+            "browserTarget": "ghpage-eOSR:build"
           }
         },
         "test": {
@@ -115,15 +115,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "eOSR-blockchain:serve"
+            "devServerTarget": "ghpage-eOSR:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "eOSR-blockchain:serve:production"
+              "devServerTarget": "ghpage-eOSR:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "eOSR-blockchain"
+  "defaultProject": "ghpage-eOSR"
 }
