--- a/package.json
+++ b/package.json
@@ -12,15 +12,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.7",
+    "@angular/cdk": "~8.2.1",
     "@angular/common": "~8.2.7",
     "@angular/compiler": "~8.2.7",
-    "@angular/core": "~8.2.7",
+    "@angular/core": "^8.2.7",
     "@angular/forms": "~8.2.7",
+    "@angular/material": "^8.2.1",
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
+    "@isomorphic-git/lightning-fs": "^3.3.2",
+    "browserfs": "^1.4.3",
+    "isomorphic-git": "^0.67.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "tweetnacl": "^1.0.1",
+    "tweetnacl-util": "^0.15.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
