--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
     "@isomorphic-git/lightning-fs": "^3.3.2",
+    "bootstrap": "^4.3.1",
     "browserfs": "^1.4.3",
     "isomorphic-git": "^0.67.2",
     "rxjs": "~6.4.0",
